tela de fim de jogo funcionando

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>VOCÊ MORREU !!!!! HAHAHAHA</h1>
         </div>
         <div class = "placar">
-            <h1>Points: <span id = "pontuacao"></span>0</h1>
+            <h1 id = "placa">Points: <span id = "pontuacao"></span>0</h1>
             <div class = "life">
                 <img src = "images/life.png" class = "vida"/>
                 <img src = "images/life.png" class = "vida"/>
